added the medium rating for every book